--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,8 +7,7 @@
     <div class="home">
         <img src="{{ asset('build/images/Fabienne-HOME.jpg') }}" alt="" class="w-100 img-start">
         <div class="d-flex flex-column justify-content-center align-items-center text-primary title-container mt-5 mx-auto">
-            <h1 class="text-center mx-4 mx-md-0 fs-1">{{ 'home.title'|trans }}</h1>
-            <p class="fs-4 text-center mx-4 mx-md-0">{{ 'home.underTitle'|trans|raw }}</p>
+            <h1 class="text-center mx-4 mx-md-0 fs-1">{{ 'home.title'|trans|raw }}</h1>
         </div>
         <div class="d-flex justify-content-around flex-column flex-md-row align-items-center mt-4">
             <div class="container-video ms-xxl-5 d-flex">
@@ -21,21 +20,39 @@
         <div class="presentation d-md-flex justify-content-center flex-column">
             <div class="top d-flex">
                 <div class="left text-white d-flex flex-column">
-                    <h2 class="mx-4 mt-4 fs-2">{{ 'home.presentaion.head.title'|trans }}</h2>
+                    <h2 class="mx-4 mt-4 fs-2">{{ 'home.presentaion.head.title'|trans|raw }}</h2>
                     <h3 class="mx-4 my-4 fs-5 lh-sm">{{ 'home.presentation.head.text'|trans|raw }}</h3>
                 </div>
                 <div class="right">
-
+                    
                 </div>
             </div>
             <div class="bottom d-flex">
                 <div class="left">
-                    <p class="text text-dark mb-5 mx-4 my-4">{{ 'home.presentation.body.text'|trans|raw }}</p>
+                    <p class="text text-dark mb-5 mx-4 my-5">{{ 'home.presentation.body.text'|trans|raw }}</p>
                 </div>
                 <div class="right">
                     <img src="{{ asset('build/images/flower.jpg') }}" alt="{{ 'home.flowerImage'|trans }}" class="image">
                     <div class="decoration"></div>
                 </div>
+            </div>
+        </div>
+        <div class="mt-5 middle-text mx-auto">
+            <p>{{'home.middle-text.p1'|trans|raw}}</p>
+            <ol>
+                {{'home.middle-text.p1.ol'|trans|raw}}
+            </ol>
+            <p>{{'home.middle-text.p2'|trans|raw}}</p>
+            <ul>
+                {{'home.middle-text.p2.ul'|trans|raw}}
+            </ul>
+            <p>{{'home.middle-text.p3'|trans|raw}}</p>
+            <div class="d-flex justify-content-center">
+                <a href="{{ path('contact_service') }}"><button class="btn btn-secondary text-white my-3"> {{ 'button.i-reserve-my-session'|trans }}</button></a>
+            </div>
+            <p>{{'home.middle-text.p4'|trans|raw}}</p>
+            <div class="d-flex justify-content-center">
+                <a href="{{ path('app_service_index') }}"><button class="btn btn-secondary text-white my-3"> {{ 'button.i-discover'|trans }}</button></a>
             </div>
         </div>
         <div class="container-service-card-container">
@@ -53,6 +70,7 @@
                         <div class="d-flex flex-column text-container mx-auto rounded-1">
                             <div class="content-container">
                                 <h3 class="font-weight-bold text-center mt-3 fst-italic fs-6 mb-4">{{ 'home.giftCard.title'|trans }}</h3>
+                                <p class="mt-2 mx-3"> {{ 'home.giftCard.p'|trans|raw}} </p>
                             </div>
                             <div class="d-flex justify-content-center">
                                 <a href="{{ path('giftCard_index') }}"><button class="btn btn-secondary text-white">
@@ -65,7 +83,7 @@
         </div>
         {% if commentaries is defined and commentaries|length > 0 %}
             <div id="carouselExampleIndicators" class="carousel slide mt-5">
-                <p class="commentary-introduction mx-auto">{{ 'home.CommmentaryIntroduction'|trans }}</p>
+                <p class="commentary-introduction mx-auto">{{ 'home.CommmentaryIntroduction'|trans|raw }}</p>
                 <div class="carousel-inner commentaries-carousel d-flex align-items-center">
                     {% for commentary in commentaries %}
                         {% if loop.first %}
@@ -73,15 +91,12 @@
                                 <div class="h-100 commentary d-flex align-items-center">
                                     <div class="mx-auto">
                                         {% if app.request.locale == 'fr' %}
-                                            <h2 class="fs-4">{{ commentary.titleFr|raw }}</h2>
                                             <p class="mt-4 text-break">{{ commentary.contentFr|raw }}</p>
                                             <p class="fst-italic fw-bold fs-5 mt-4">{{ commentary.authorFr|raw }}</p>
                                         {% elseif app.request.locale == 'es' %}
-                                            <h2 class="fs-4">{{ commentary.titleEs|raw }}</h2>
                                             <p class="mt-4 text-break">{{ commentary.contentEs|raw }}</p>
                                             <p class="fst-italic fw-bold fs-5 mt-4">{{ commentary.authorEs|raw }}</p>
                                         {% else %}
-                                            <h2 class="fs-4">{{ commentary.titleEt|raw }}</h2>
                                             <p class="mt-4 text-break">{{ commentary.contentEt|raw }}</p>
                                             <p class="fst-italic fw-bold fs-5 mt-4">{{ commentary.authorEt|raw }}</p>
                                         {% endif %}
@@ -100,15 +115,12 @@
                                 <div class="h-100 commentary d-flex align-items-center">
                                     <div class="mx-auto">
                                         {% if app.request.locale == 'fr' %}
-                                            <h2 class="fs-4">{{ commentary.titleFr|raw }}</h2>
                                             <p class="mt-4 text-break">{{ commentary.contentFr|raw }}</p>
                                             <p class="fst-italic fw-bold fs-5 mt-4">{{ commentary.authorFr|raw }}</p>
                                         {% elseif app.request.locale == 'es' %}
-                                            <h2 class="fs-4">{{ commentary.titleEs|raw }}</h2>
                                             <p class="mt-4 text-break">{{ commentary.contentEs|raw }}</p>
                                             <p class="fst-italic fw-bold fs-5 mt-4">{{ commentary.authorEs|raw }}</p>
                                         {% else %}
-                                            <h2 class="fs-4">{{ commentary.titleEt|raw }}</h2>
                                             <p class="mt-4 text-break">{{ commentary.contentEt|raw }}</p>
                                             <p class="fst-italic fw-bold fs-5 mt-4">{{ commentary.authorEt|raw }}</p>
                                         {% endif %}
