--- a/templates/service/index.html.twig
+++ b/templates/service/index.html.twig
@@ -11,13 +11,40 @@
             </div>
             <div class="head-text-container bg-light">
                 <h1 class="text-center text-primary">{{ 'service.index.body.title'|trans }}</h1>
-                <p class="mt-5">{{ 'service.index.p.1'|trans|raw }}</p>
+                <p class="mt-5">{{ 'service.index.top.p.1'|trans|raw }}</p>
+                <h5 class="fw-bold">{{ 'service.index.top.h5.1'|trans|raw }}</h5>
+                <p>{{ 'service.index.top.p.2'|trans|raw }}</p>
+                <ul>{{ 'service.index.top.ul.1'|trans|raw }}</ul>
             </div>
         </div>
         <div class="offer-container">
             <div class="mx-auto w-50 mt-5 mb-5 offer">
                 <h2 class="fs-h1 mt-3 text-center text-primary">{{ 'service.index.myOffer'|trans }}</h2>
-                <p class="mt-4">{{ 'service.index.p.2'|trans|raw }}</p>
+            </div>
+        
+            <div class="d-flex flex-wrap justify-content-center service-card-container mx-auto">
+                {% for service in services %}
+                    <div class="service-card mt-5 d-flex flex-column">
+                        {% include '_include/_card_service.html.twig' %}
+                    </div>
+                {% endfor %}
+                <div class="service-card mt-5 d-flex flex-column">
+                    <div class="image-container mx-auto">
+                        <img src="{{ asset('build/images/Fabimage-carte-cadeau-FR-1-petit.png') }}" alt="" class="w-100 h-100">
+                    </div>
+                    <div>
+                        <div class="d-flex flex-column text-container mx-auto rounded-1">
+                            <div class="content-container">
+                                <h3 class="font-weight-bold text-center mt-3 fst-italic fs-6 mb-4">{{ 'home.giftCard.title'|trans }}</h3>
+                                <p class="mt-2 mx-3"> {{ 'home.giftCard.p'|trans|raw}} </p>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <a href="{{ path('giftCard_index') }}"><button class="btn btn-secondary text-white">
+                                        {{ 'Service.readMore'|trans }}</button></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         {% if app.user %}
@@ -27,26 +54,22 @@
                 </a>
             </div>
         {% endif %}
-        <div class="d-flex flex-wrap justify-content-center service-card-container mx-auto">
-            {% for service in services %}
-                <div class="service-card mt-5 d-flex flex-column">
-                    {% include '_include/_card_service.html.twig' %}
-                </div>
-            {% endfor %}
-            <div class="service-card mt-5 d-flex flex-column">
-                <div class="image-container mx-auto">
-                    <img src="{{ asset('build/images/Fabimage-carte-cadeau-FR-1-petit.png') }}" alt="" class="w-100 h-100">
-                </div>
-                <div>
-                    <div class="d-flex flex-column text-container mx-auto rounded-1">
-                        <div class="content-container">
-                            <h3 class="font-weight-bold text-center mt-3 fst-italic fs-6 mb-4">{{ 'home.giftCard.title'|trans }}</h3>
-                        </div>
-                        <div class="d-flex justify-content-center">
-                            <a href="{{ path('giftCard_index') }}"><button class="btn btn-secondary text-white">
-                                    {{ 'Service.readMore'|trans }}</button></a>
-                        </div>
-                    </div>
+        <div class="mt-5 text-offer mx-auto">
+            <div>
+                <h5 class="fw-bold"> {{'service.index.offer.h5.1'|trans|raw}} </h5>
+                <p>{{'service.index.offer.p.1'|trans|raw}}</p>
+                <ul>{{'service.index.offer.ul.1'|trans|raw}}</ul>
+            </div>
+            <div>
+                <h5 class="fw-bold"> {{'service.index.offer.h5.2'|trans|raw}} </h5>
+                <p>{{'service.index.offer.p.2'|trans|raw}}</p>
+                <ul>{{'service.index.offer.ul.2'|trans|raw}}</ul>
+                <p>{{'service.index.offer.p.3'|trans|raw}}</p>
+                <ul>{{'service.index.offer.ul.3'|trans|raw}}</ul>
+                <h5 class="fw-bold">{{'service.index.offer.h5.3'|trans|raw}}</h5>
+                <p>{{'service.index.offer.p.4'|trans|raw}}</p>
+                <div class="d-flex justify-content-center">
+                    <a href="{{ path('contact_service') }}"><button class="btn btn-secondary text-white my-3"> {{ 'button.MyFreeSession'|trans }}</button></a>
                 </div>
             </div>
         </div>
