--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,7 @@
 
     </main>
     {% include '_include/_footer.html.twig' %}
-    {% block script %}{% endblock %}
+    {% block script %}
+    {% endblock %}
     </body>
 </html>
