change text and visual of page home,fabienne,service

--- a/templates/presentation/fabienne.html.twig
+++ b/templates/presentation/fabienne.html.twig
@@ -58,6 +58,11 @@
                 </div>
             </div> 
         </div>
+        <div class="small-commentary-container mx-auto">
+            <h3 class="fw-bold fs-4">{{'smallCommentary.h3.1'|trans|raw}}</h3>
+            <h5 class="fw-bold mt-3">{{'smallCommentary.h5.1'|trans|raw}}</h5>
+            <p class="mt-4"> {{'smallCommentary.p.1'|trans|raw}} </p>
+        </div>
     </div>
     {{ render(controller('App\\Controller\\ContactController::actuality')) }}
 {% endblock %}
