--- a/templates/_include/_card_workshop.html.twig
+++ b/templates/_include/_card_workshop.html.twig
@@ -4,7 +4,7 @@
 <div>
     <div class="d-flex flex-column text-container mx-auto rounded-1">
         <div class="content-container">
-            <h3 class="font-weight-bold text-center mt-3 fst-italic fs-6 mb-0">
+            <h3 class="font-weight-bold text-center mt-3 fst-italic fs-6 mb-0 title-workshop">
                 {% if app.request.locale == 'fr' %}
                     {{ workshop.titleFr }}
                 {% elseif app.request.locale == 'es' %}
@@ -12,6 +12,25 @@
                 {% else %}
                     {{ workshop.titleEt }}
                 {% endif %}</h3>
+            {% if app.request.locale == 'fr' %}
+                {% if workshop.type == 'workshop'%}
+                <h5 class="text-center fs-6 mt-1 fw-bold">ATELIER</h5>
+                {% elseif workshop.type == "masterclass" %}
+                <h5 class="text-center fs-6 mt-1 fw-bold">MASTERCLASS EN LIGNE</h5>
+                {% endif %}
+            {% elseif app.request.locale == 'es' %}
+                {% if workshop.type == 'workshop'%}
+                <h5 class="text-center fs-6 mt-1 fw-bold">TALLERE</h5>
+                {% elseif workshop.type == "masterclass" %}
+                <h5 class="text-center fs-6 mt-1 fw-bold">MASTERCLASS EN LINEA</h5>
+                {% endif %}
+            {% elseif app.request.locale == 'et' %}
+                {% if workshop.type == 'workshop'%}
+                <h5 class="text-center fs-6 mt-1 fw-bold">ÕPITOAD</h5>
+                {% elseif workshop.type == "masterclass" %}
+                <h5 class="text-center fs-6 mt-1 fw-bold">MEISTRIKLASSID</h5>
+                {% endif %}
+            {% endif %}
             <p class="mt-2 mx-3">
                 {% if app.request.locale == 'fr' %}
                     {{ workshop.underTitleFr|nl2br }}
