--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -4,6 +4,14 @@
 
 {% block body %}
 <div class="article-index">
+    {% if app.request.locale == 'et' %}
+    <div class="w-75 mx-auto">
+        <p class="mt-5 mx-auto p-iframe">{{ 'coachingImage.iframe.p'|trans|raw }}</p>
+        <div class="iframe-container mx-auto">
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1603456062&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/tallinna-opetajate-maja" title="Tallinna Õpetajate Maja" target="_blank" style="color: #cccccc; text-decoration: none;">Tallinna Õpetajate Maja</a> · <a href="https://soundcloud.com/tallinna-opetajate-maja/oppimise-vaimus-12-fabienne-chmara-oma-ainulaadse-ja-autentse-stiili-arendamisest" title="Õppimise vaimus #12. Fabienne Chmara oma ainulaadse ja autentse stiili arendamisest" target="_blank" style="color: #cccccc; text-decoration: none;">Õppimise vaimus #12. Fabienne Chmara oma ainulaadse ja autentse stiili arendamisest</a></div>
+        </div>
+    </div>
+    {% endif %}
     <div class="article-container mx-auto row">
         <div class="col-md-9 col-12">
             {% for article in articles %}
