--- a/templates/workshop/_form.html.twig
+++ b/templates/workshop/_form.html.twig
@@ -70,7 +70,14 @@
             {{ form_widget(form.location) }}
             {{ form_errors(form.location) }}
         </div>
+    </div>
+    <div class="d-flex justify-content-center">
+        <div class="d-flex flex-column mt-4">
+            {{ form_label(form.type, 'Type de l\'atelier') }}
+            {{ form_widget(form.type) }}
+            {{ form_errors(form.type) }}
         </div>
+    </div>
     <div class="errors w-50 mt-3">
         {{ form_errors(form) }}
     </div>
