--- a/assets/styles/_serviceIndex.scss
+++ b/assets/styles/_serviceIndex.scss
@@ -1,9 +1,19 @@
 .service-index{
   .head-text-container{
-    @include media-breakpoint-up(md){
+    @include media-breakpoint-up(lg){
       position: relative;
       top: 100px;
-      width: 50%;
+      width: 750px;
+      padding-left: 100px;
+      padding-right: 100px;
+      padding-top: 80px;
+      margin-left: auto;
+      margin-right: 100px;
+    }
+    @include media-breakpoint-up(xxl){
+      position: relative;
+      top: 100px;
+      width: 1000px;
       padding-left: 100px;
       padding-right: 100px;
       padding-top: 80px;
