--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -34,3 +34,4 @@
 @import "_actuality.scss";
 @import "_followUpEmailForm.scss";
 @import "_followUpEmailIndex.scss";
+@import "_commentaryCard.scss";
