--- a/templates/service/index.html.twig
+++ b/templates/service/index.html.twig
@@ -73,10 +73,7 @@
                 </div>
             </div>
         </div>
-        <div class="small-commentary-container mx-auto">
-            <h5 class="fw-bold mt-3">{{'smallCommentary.h5.1'|trans|raw}}</h5>
-            <p class="mt-4"> {{'smallCommentary.p.1'|trans|raw}} </p>
-        </div>
+        {{ render(controller('App\\Controller\\CommentaryHomeController::commentaryCard')) }}
     </div>
     {{ render(controller('App\\Controller\\ContactController::actuality')) }}
 {% endblock %}
