--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -35,3 +35,5 @@
 @import "_followUpEmailForm.scss";
 @import "_followUpEmailIndex.scss";
 @import "_commentaryCard.scss";
+@import "_marquee.scss";
+@import "_marqueeForm.scss"
