--- a/templates/book/downloadBookEmail.html.twig
+++ b/templates/book/downloadBookEmail.html.twig
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h3>{{ firstName }} a téléchargé {{ book }}</h3>
-<p>email: {{ email }}</p>
+<p>email: {{ mail }}</p>
 </body>
 </html>
