--- a/assets/styles/_serviceIndex.scss
+++ b/assets/styles/_serviceIndex.scss
@@ -20,7 +20,11 @@
       margin-left: auto;
       margin-right: 200px;
     }
-    @include media-breakpoint-down(md){
+    @include media-breakpoint-down(xl){
+      margin-right: 0px;
+      padding-right: 30px;
+    }
+    @include media-breakpoint-down(lg){
       margin-top: 50px;
       width: 90%;
       margin-left: auto;
@@ -31,7 +35,7 @@
     }
   }
   .title-image-container{
-    @include media-breakpoint-up(md){
+    @include media-breakpoint-up(lg){
       position: absolute;
       z-index: -1;
       margin-left: 100px;
@@ -45,7 +49,11 @@
       width: 70%;
       height: 310px;
     }
-    @include media-breakpoint-down(md){
+    @include media-breakpoint-down(xl){
+      margin-left: 40px;
+    }
+    @include media-breakpoint-down(lg){
+      margin-left: 0px;
       width: 100%;
       height: initial;
     }
@@ -54,7 +62,7 @@
     background-color: white;
     padding-top: 15px;
     .offer{
-      @include media-breakpoint-down(md){
+      @include media-breakpoint-down(lg){
         width: 90%!important;
       }
     }
@@ -67,7 +75,7 @@
   }
   .text-offer{
     width: 50%;
-    @include media-breakpoint-down(md){
+    @include media-breakpoint-down(lg){
       width: 90%;
     }
   }
