--- a/templates/book/buyedBookEmail.html.twig
+++ b/templates/book/buyedBookEmail.html.twig
@@ -5,39 +5,33 @@
     <title></title>
 </head>
 <body>
-    {% if lang == 'Fr' %}
+    {% if lang == 'fr' %}
         <p class="">{{ book.emailFr|raw }}</p>
-        {% elseif lang == 'Es' %}
+        {% elseif lang == 'es' %}
         <p class="">{{ book.emailEs|raw }}</p>
         {% else %}
         <p class="">{{ book.emailEt|raw }}</p>
     {% endif %}
     {% if book.videoLinkFr or book.videoLinkEs or book.videoLinkEt %}
-        {% if lang == 'Fr' %}
+        {% if lang == 'fr' %}
             <p>Vous pouvez regarder la vidéo  <a href="{{ book.videoLinkFr }}">ici</a></p>
-        {% elseif lang == 'Es' %}
+        {% elseif lang == 'es' %}
             <p>Puedes ver el vídeo <a href="{{ book.videoLinkEs }}">aquí</a></p>
         {% else %}
             <p>Videot näed <a href="{{ book.videoLinkEt }}">siit</a></p>
         {% endif %}
         {% if book.videoPassword %}
-            <p>{{'book.email.password'|trans}} {{ book.videoPassword }}</p>
+            <p>{{'book.email.password'|trans({}, 'messages', lang)}} {{ book.videoPassword }}</p>
         {% endif %}
     {% endif %}
-    {% if free is defined %}
-        {% if book.bookFr or book.bookEs or book.bookEt %}
-            <a href="{{ app.request.getSchemeAndHttpHost() ~ path('app_download', {'token': token, 'free': 1}) }}">{{ 'downloadBook'|trans }}</a>
-        {% endif %}
-    {% else %}
-        <a href="{{ app.request.getSchemeAndHttpHost() ~ path('app_download', {'token': token}) }}">{{ 'downloadBook'|trans }}</a>
-    {% endif %}
-    <p class="fs-6">{{ 'book.buyed.email.p.end'|trans|raw }}</p>
-    <p class=""><small>{{ 'book.buyed.email.p.end.2'|trans|raw }}</small></p>
+    <a href="{{ base_url ~ path('app_download', {'token': token}) }}">{{ 'downloadBook'|trans({}, 'messages', lang) }}</a>
+    <p class="fs-6">{{ 'book.buyed.email.p.end'|trans({}, 'messages', lang)|raw }}</p>
+    <p class=""><small>{{ 'book.buyed.email.p.end.2'|trans({}, 'messages', lang)|raw }}</small></p>
     <ul>
-        <li class="small-fs"><i><small>{{'book.buyed.email.li.1'|trans|raw}}</small></i></li>
-        <li class="small-fs"><i><small>{{'book.buyed.email.li.2'|trans|raw}}</small></i></li>
-        <li class="small-fs"><i><small>{{'book.buyed.email.li.3'|trans|raw}}</small></i></li>
+        <li class="small-fs"><i><small>{{'book.buyed.email.li.1'|trans({}, 'messages', lang)|raw}}</small></i></li>
+        <li class="small-fs"><i><small>{{'book.buyed.email.li.2'|trans({}, 'messages', lang)|raw}}</small></i></li>
+        <li class="small-fs"><i><small>{{'book.buyed.email.li.3'|trans({}, 'messages', lang)|raw}}</small></i></li>
     </ul>
-    <p class=""><small>{{'book.buyed.email.p.end.3'|trans|raw}}</small></p>
+    <p class=""><small>{{'book.buyed.email.p.end.3'|trans({}, 'messages', lang)|raw}}</small></p>
 </body>
 </html>
