--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -8,7 +8,7 @@
         <form action="{{ path('app_login') }}" method="post" class="mx-auto mt-3">
             <div class="form-floating">
                 <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" placeholder="john@doe.fr">
-                <label for="username">email</label>
+                <label for="username">Email</label>
             </div>
 
             <div class="form-floating mt-4">
