fix marquee lien

--- a/assets/styles/_marquee.scss
+++ b/assets/styles/_marquee.scss
@@ -5,6 +5,10 @@
     width: 100%;
     white-space: nowrap;
     margin-top: -50px;
+    a {
+        color: white;
+        text-decoration: underline;
+    }
 
     p {
         position: absolute;
